--- a/Dissertation/part_implementation.tex
+++ b/Dissertation/part_implementation.tex
@@ -3,37 +3,146 @@
 
 \section{Введение} \label{sect_impl_introduction}
 
+Реальные программы пользуются всеми возможностями языка Си, не все из которых были рассмотрены в теории.
+Например, описанная теория не предполагает использования указателей и адресной арифметики.
+Поэтому реализация рассмотренных анализов может некоторым образом отличаться от теоретического описания.
+В разделе~\ref{sect_impl_overview} описаны реализации всех используемых анализов.
+
 При переходе от теории к практике становится важным уделять большее внимание эффективности применяемых алгоритмов.
-В этом разделе будут описаны оптимизации теоретически разработанных алгоритмов, которые позволяют применять их для реальных программных систем. 
+В разделе~\ref{sect_impl_storage} будут описаны оптимизации теоретически разработанных алгоритмов, которые позволяют применять их для реальных программных систем. 
 
-Первая такая оптимизация касается хранения достижимых состояний. В теории для определения состояния гонки необходимо было для каждой пары достигнутых состояний проверить наличие обращения к одинаковой разделяемой памяти. Такой простой алгоритм был совершенно не эффективен. Количество различных состояний может превышать десять миллионов. Поэтому необходимы очень эффективные алгоритмы хранения и поиска пары состояний образующих состояние гонки. В подразделе~\ref{sect_impl_storage} будут описаны соответствующие оптимизации.
+Первая такая оптимизация касается хранения достижимых состояний. В теории для определения состояния гонки необходимо было для каждой пары достигнутых состояний проверить наличие обращения к одинаковой разделяемой памяти.
+Такой простой алгоритм был совершенно не эффективен. Количество различных состояний может превышать десять миллионов.
+Поэтому необходимы очень эффективные алгоритмы хранения и поиска пары состояний образующих состояние гонки. 
 
-Процесс уточнения построенной абстракции может занимать достаточно много времени даже при решении задачи достижимости. При поиске состояний гонки может быть необходимо уточнить абстракцию сразу для нескольких обнаруженных состояний гонки. Уточнение абстракции последовательно становится очень неэффективным. В подразделе~\ref{sect_impl_refinement} описан процесс уточнения абстракции и применяемые оптимизации.
+Процесс уточнения построенной абстракции может занимать достаточно много времени даже при решении задачи достижимости.
+При поиске состояний гонки может быть необходимо уточнить абстракцию сразу для нескольких обнаруженных состояний гонки.
+Уточнение абстракции последовательно становится очень неэффективным. В подразделе~\ref{sect_impl_refinement} описан процесс уточнения абстракции и применяемые оптимизации.
 
-Важной задачей, на которую многие академические инструменты не обращают внимания, является понятное и наглядное представление результатов верификации. Это особенно важно для описания ошибок, связанных с параллельным выполнением нескольких потоков, так как при этом не достаточно указать только строку или переменную, в которой возможно наличие ошибки. Необходимо представить полную трассу выполнения потоков, выделив некоторые важные события, например, создание потоков, захват примитивов синхронизации и одновременные доступы к разделяемой памяти. В подразделе~\ref{sect_impl_visualiztion} будут описан алгоритм печати трассы.
+Важной задачей, на которую многие академические инструменты не обращают внимания, является понятное и наглядное представление результатов верификации. Это особенно важно для описания ошибок, связанных с параллельным выполнением нескольких потоков, так как при этом не достаточно указать только строку или переменную, в которой возможно наличие ошибки. Необходимо представить полную трассу выполнения потоков, выделив некоторые важные события, например, создание потоков, захват примитивов синхронизации и одновременные доступы к разделяемой памяти. В подразделе~\ref{sect_impl_visualization} будут описан алгоритм печати трассы.
 
-\section{Обзор инструмента} \label{sect_impl_storage}
+\section{Реализация анализов} \label{sect_impl_overview}
 
-Описание анализов
+\subsection{Обзор инструмента}
 
-LockCPA
+Инструмент реализован в виде двух частей.
+Первая часть используется для определения множества разделяемых данных.
+Вторая часть представляет собой основной анализ, который используется для определения множества доступов к памяти.
+После завершения анализа строится множество потенциальных состояний гонки.
+На рисунке~\ref{img:method} представлена визуальная схема метода.
 
-ThreadCPA
+\begin{figure}[ht] 
+  \centering
+  \includegraphics [scale=0.6] {MethodScheme}
+  \caption{Общая схема метода}
+  \label{img:method}
+\end{figure}
 
-PredicateCPA
+Анализ разделяемых данных состоит из следующих CPA: BAMCPA, CompositeCPA, LocationCPA, CallstackCPA, LocalCPA.
+\begin{itemize}
+\item BAMCPA. Анализ будет подробно описан в соответствующем разделе.
+\item CompositeCPA. Анализ объединяет в себе несколько анализов, в нашем случае, LocationCPA, CallstackCPA и LocalCPA.
+\item LocationCPA. Анализ служит для корректного обхода графа потока управления. Абстрактным состоянием этого анализа является узел графа потока управления, а переход в следующее состояние возможен только по доступным дугам ГПУ из этого узла.
+\item CallstackCPA. Анализ служит для обеспечения контекстной зависимости. Абстрактным состоянием анализа является стек вызовов функций. Таким образом, вызов одной и той же функции из разных мест не приведет к получению одинакового абстрактного состояния.
+\item LocalCPA. Анализ определяет множество разделяемых переменных для данной точки программы.
+Информация о локальности данных распространяется по присваиваниям от точек выделения локальной памяти или взятия адреса локальной переменной.
+Если про некоторую переменную не известно ее статус, консервативно считается, что память является разделяемой.
+\end{itemize}
+
+Основной анализ состоит из следующих CPA: BAMCPA, UsageCPA, CompositeCPA, LocationCPA, CallstackCPA, LockCPA, PredicateCPA.
+Анализы BAMCPA, CompositeCPA, LocationCPA и CallstackCPA являются теми же, что и в предыдущем случае.
+Подробное описание остальных анализов будет приведено далее.
+
+Исходный код программы, подаваемый на вход может быть разбит на несколько файлов, но, тем не менее, этот набор должен компилироваться.
+Чтобы избежать сложных конструкций языка Си и упростить код, часто применяется инструмент CIL~\cite{CIL}, который, в том числе, может объединять несколько файлов в один.
+
+Результатом анализа является множество предупреждений.
+Каждое предупреждение представляет собой пару доступов к разделяемой памяти с непересекающимся множеством блокировок, при этом хотя бы одна из них является записью.
+Для каждого доступа к разделяемой памяти восстанавливается один из путей, который может привести к этому доступу.
+Формат выходных данных описан в разделе~\ref{sect_impl_visualization}.
+
+\subsection{Анализ примитивов синхронизации}
+Анализ разделяемых данных соответствует описанному в теоретической части LockCPA.
+Одной из особенностей теоретически описанного LockCPA, это то, что захватываемый объект (блокировка) должна быть явно указана в операторе $acquire$.
+В реальных же программах сами объекты часто используются по указателям.
+Во многих статьях, которые задаются вопросом применения своих инструментов к реальному программному обеспечению, часто применяют анализ указателей для вычисления объектов, на которые могут указывать те указатели, которые используются при захвате блокировки.
+Однако, как и всякий анализ указателей, такой подход имеет ряд недостатков, главными из которых являются его эффективность и точность.
+Дело в том, что анализ указателей Андерсена (и его различные вариации) может применяться только если указатели должным образом инициализируются.
+В случае же если инициализация указателя не была проведена должным образом и ему не была поставлена в соответствие некоторая память, такой анализ будет некорректным.
+В нашем случае инициализация многих указателей может отсутствовать, так как не весь исходный код может верифицироваться за один раз.
+
+Все это приводит к тому, что определить точное соответствие указателей в общем случае становится невозможным.
+Приходится делать некоторое разумное предположение о том, что захват блокировки и ее освобождение, скорее всего, будет производится одинаковым образом.
+Например, если был использован указатель на объект при захвате, то он же будет использован и при освобождении.
+Таким образом, становится возможно, в соответствии с теорией, по имени переменной, быть может указателю, явно определить тот объект, с которым производится работа.
+
+Еще одной небольшой особенностью реализации является поддержка рекурсивного захвата блокировки. 
+Некоторые блокировки допускают захват несколько раз в одном потоке.
+В описанной теории такой случай не поддерживается, однако в реализации достаточно просто поддержать его при условии, что такой захват не будет встречаться в цикле.
+
+В реальном программном обеспечении возможны ситуации, в которых анализ будет рассматривать такие пути, которые недостижимы в при реальном выполнении.
+Классическим примером такой ситуации, является захват и освобождение блокировки под одни и тем же условием. 
+После выполнения такого участка кода при реальном выполнении ситуация, при которой эта блокировка останется захваченной, невозможна.
+Однако, анализ может не определить, что условия являются тождественными, и будет рассматривать такой путь, при котором захват блокировки был произведен, а освобождения не было.
+Такая ситуация чревата тем, что количество абстрактных состояний в анализе может удвоиться, если такая функция вызывается достаточно часто.
+И хотя такие шаблоны встречаются нечасто, все-таки обычно блокировки захватываются без сложных условий, необходимо было иметь возможность давать анализу некоторые подсказки.
+
+Такими подсказками стали аннотации функций.
+Разработчик может добавить информацию о том, как именно следует обрабатывать конкретную функцию.
+Поддерживаются следующие типы аннотаций:
+\begin{itemize}
+\item функция захватывает конкретную блокировку;
+\item функция освобождает конкретную блокировку;
+\item функция полностью сбрасывает конкретную блокировку, включая все рекурсивные захваты;
+\item при выходе из функции все изменения блокировок сбрасываются, то есть, считается, что на выходе из функции захвачены те и только те блокировки, которые были захвачены на входе в функцию.
+\end{itemize}
+
+\subsection{Анализ потоков}
+Анализ потоков соответствует описанному в теоретической части ThreadCPA.
+Основным отличием является то, что 
+
+\subsection{Анализ предикатов}
+Анализ потоков соответствует описанному в теоретической части PredicateCPA.
+Основной его особенностью является возможность применения havoc-абстракции, которая заключается в том, что при чтении данных из разделяемых переменных, считается, что они могут принимать любое значение.
+Как уже отмечалось, такой анализ является инвариантным к переходам "по окружению", поэтому применение inference objects в этом случае не позволит получить новые состояния.
 %Тоже сделать частью Usage?
 
-UsageCPA
+\subsection{Анализ доступов к данным}
+Основной задачей UsageCPA является определение и сохранение информации о доступах к данным. 
+Для каждого оператора программы определяются те доступы к памяти, которые могут быть затронуты при его выполнении, определяется тип доступа и некоторая вспомогательная информация, например, номер строки исходного кода.
+Подробнее структура сохраняемой информации будет представлена в разделе~\ref{subsect_impl_storage}.
+Идентификаторы доступа к памяти, которые используются при сохранении информации представлены в разделе~\ref{subsect_impl_identifiers}.
 
-BAMCPA
+Поддерживаются следующие типы операторов:
+\begin{itemize}
+\item Присваивание. Для левой части присваивания формируется идентификатор (множество идентификаторов) и добаляется тип доступа на запись, для правло части присваивания формируется идентификатор (множество идентификаторов) и добавляется тип доступа на чтение.
+\item Условие. Формируется идентификатор (множество идентификаторов) с типом доступа на чтение.
+\item Вызов функции. Для каждого аргумента формируется идентификатор (множество идентификаторов) с типом доступа на чтение.
+\item Возврат из функции. Для возвращаемого значения формируется идентификатор (множество идентификаторов) с типом доступа на чтение. В случае, если возвращаемое значение присваивается в некоторую переменную, для этой переменной формируется идентификатор (множество идентификаторов) с типом доступа на запись.
+\end{itemize}
+Определения переменной, пустые (служебные) операторы не считаются доступами к памяти.
 
-Картинка
+Информация о доступе перед сохранением проходит ряд тривиальных фильтров, которые позволяют избежать хранения бесполезной информации о тех доступах к данным, которые не могут участвовать в состоянии гонки.
 
-Пример работы 
+\begin{itemize}
+\item Запись в локальные переменные. Так как локальные переменные доступны только одному потоку, то изменение их значения не может быть одновременным.
+\item Запись в неразделяемую память. Например, сразу после выделения новой памяти она еще недоступна другим потокам, и ее можно изменять без использования механизмов синхронизации.
+\item Запись в служебные переменные, например, те, которые используются в модели окружения для обеспечения корректной последовательности вызовов. 
+\end{itemize}
 
-\section{Оптимизации хранения данных} \label{sect_impl_storage}
+Кроме основных задач по организации хранения информации о доступах к данным, UsageCPA используется для обработки специализированных функций, например, работы со сложными структурами данных.
+Возьмем, например, функцию, которая добавляет элемент в список.
+Эта функция записывает адрес нового элемента в условное поле \textit{next} последнего элемента в списке.
+В этом случае анализ определит, что доступ производится к некоторому элементу списка.
+Однако, таких списков может быть несколько, которые устроены совершенно разным образом, например, требуют различных механизмов синхронизации при работе с ними. 
+Для анализа было бы удобнее считать, что доступ производится не к отдельному элементу, а ко всем списку целиком. 
+В этом случае могут помочь аннотации, которыми дополняются специальные функции, в нашем примере, функции работы со списками.
+Такая аннотация задает доступ к какому параметру функции, включая возвращаемое значение, следует трактовать как доступ к другому параметру.
+Рассмотрим пример условной функции \textit{getLast()}, которая возвращает последний элемент списка: \textit{element = getLast(list)}.
+Для такой функции может быть аннотация, которая определяет, что доступ к памяти, которую возвращает эта функция, должен трактоваться как доступ ко всему списку. 
+В этом примере важно, что функция \textit{getLast()} не удаляет последний элемент из списка.
 
-\subsection{Block Abstraction Memoization} \label{subsect_impl_bam}
+\subsection{Анализ абстракций по блокам} \label{subsect_impl_bam}
 
 В процессе анализа используется оптимизация, использующая абстрактные блоки (англ. Block Abstraction Memoization, BAM). 
 Эта оптимизация позволяется переиспользовать результаты, полученные в процессе анализа.
@@ -45,8 +154,32 @@ BAMCPA
 В случае, если результат уже присутствует к кэше, то есть анализ для данного состояния уже проводился ранее, выполняется операция expand, которая на основе полного исходного состояния и неполного результирующего состояния строит полное результирующее состояние. 
 Если же фиксируется промах в кэше, это значит, что нужно провести анализ и сохранить его результат. 
 
-\subsection{Идентификаторы доступа к переменным} \label{subsect_impl_identifiers}
+\subsection{Пример работы} \label{sect_impl_example}
+Пример работы 
 
+\section{Оптимизации хранения данных} \label{sect_impl_storage}
+
+
+\subsection{Идентификаторы доступа к памяти} \label{subsect_impl_identifiers}
+
+Как уже было описано, состояние гонки определяется, как ситуация, при которой возможен доступ к памяти одновременно из нескольких потоков. 
+При реальном выполнении программы запись в одну и ту же ячейку памяти понятен, но возникает вопрос, что подразумевать под одной памятью при статической верификации.
+Основной проблемой становятся указатели, значение которых определяется в процессе анализа.
+Как уже отмечалось в обзоре, многие точные инструменты статической верификации, в частости инструменты, реализующие методы ограничиваемой проверки моделей, вообще не распространяют свои подходы на программы с указателями, ограничиваясь только глобальными переменными.
+В других инструментах, про которых уже говорилось в при обзоре, применяется анализ синонимов (англ. alias) Андерсена.
+В этом случае собираются так называемые may-алиасы для каждой переменной, то есть множество областей памяти (адресов), на которые может указывать данный указатель.
+
+Для нашей задачи поиска состояний гонки в системном программном коде не подходит первый способ, хотя при построении математической модели мы ограничились только глобальными переменными.
+Поиск алиасов для каждого из нескольких тысяч указателей является слишком трудоемкой задачей.
+В итоге необходимо использовать некоторую разумную эвристику, которая позволит определить одну и ту же область памяти. 
+
+Основой предложенной эвристики стало наблюдение, что обычно с одинаковыми указателями в системном программном обеспечении работают похожим образом.
+Так, например, в один и тот же указатель обычно записывают похожие данные, которые защищаются одинаковым способом.
+В этом случае не обязательно отслеживать, на какую память конкретно указывает некоторый указатель, если к нему обращаются различными способами, например, с использованием примитивов синхронизации, и без них, то это уже является достаточно подозрительным местом.
+При этом встречаются случаи, в которых такая эвристика дает ложные срабатывания. 
+Предположим, например, что в некоторую функцию передается некоторый указатель на память, которая может быть как локальной, так и разделяемой. 
+В этой функции производится некоторая обработка информации. При этом если память является разделяемой, то до вызова функции производится захват блокировки, а в случае, если память является локальной - то захват блокировки не производится.
+В этом случае 
 
 \subsection{Накопление результатов в процессе анализа} \label{subsect_impl_storage}
 
@@ -74,7 +207,7 @@ BAMCPA
 
 В том состоянии, которое соответствует абстрактному состоянию предикатного анализа, все $Usage$ из временного контейнера переносятся в следующий контейнер, соответствующий абстрактному блоку. Обозначим этот контейнер, как $FunctionContainer \subseteq UsageSet$.
 Так, при обновлении контейнера: $FunctionContainer := FunctionContainer \cup StateContainer$.
-Обновление $FunctionContainer$ происходит только если соответствующее состояние предикатного анализа не является тождественным false.
+Обновление $FunctionContainer$ происходит, только если соответствующее состояние предикатного анализа не является тождественным false.
 Это сделано для того, чтобы исключить из анализа те доступы к переменным, которые расположены на недостижимых путях.
 В случае, если в запуске не используется предикатный анализ, обновление $FunctionContainer$ производится для каждого состояния.
 
@@ -245,7 +378,7 @@ int dummy_function(){
 
 Оптимизированный вариант?
 
-\section{Печать и визуализация} \label{sect_impl_visualiztion}
+\section{Печать и визуализация} \label{sect_impl_visualization}
 
 Визуализация найденных состояний гонок является важным моментом для практического применения инструмента.
 Выдаваемой информации должно быть достаточно для того, чтобы разработчик смог понять, какие именно действия в программе могут привести к состоянию гонки.
