--- a/Synopsis/synstyles.tex
+++ b/Synopsis/synstyles.tex
@@ -2,15 +2,15 @@
 \graphicspath{{images/}{Synopsis/images/}}         % Пути к изображениям
 
 %%% Макет страницы %%%
-\geometry{a5paper, top=14mm, bottom=14mm, inner=18mm, outer=10mm, footskip=5mm, nomarginpar}%, showframe
+\geometry{a4paper, top=20mm, bottom=20mm, inner=25mm, outer=10mm, footskip=5mm, nomarginpar}%, showframe
 \setlength{\topskip}{0pt}   %размер дополнительного верхнего поля
 
 %%% Интервалы %%%
 %% Реализация средствами класса (на основе setspace) ближе к типографской классике.
 %% И правит сразу и в таблицах (если со звёздочкой) 
 %\DoubleSpacing*     % Двойной интервал
-%\OnehalfSpacing*    % Полуторный интервал
-\SingleSpacing      % Одинарный интервал
+\OnehalfSpacing*    % Полуторный интервал
+%\SingleSpacing      % Одинарный интервал
 %\setSpacing{1.42}   % Полуторный интервал, подобный Ворду (возможно, стоит включать вместе с предыдущей строкой)
 
 %%% Выравнивание и переносы %%%
