--- a/biblio/authorconferences.bib
+++ b/biblio/authorconferences.bib
@@ -1,21 +1,21 @@
-@inproceedings{coverage,
-  author = {Андрианов, П.С.},
-  title = {Оценка покрытия кода при статическом анализе},
-  booktitle = {Сборник тезисов десятой конференции разработчиков свободных программ},
-  year = {2013},
-  language = {russian},
-}
+% inproceedings{coverage,
+%  author = {Андрианов, П.С.},
+%  title = {Оценка покрытия кода при статическом анализе},
+%  booktitle = {Сборник тезисов десятой конференции разработчиков свободных программ},
+%  year = {2013},
+%  language = {russian},
+%}
 
-@conference{CPAWorkshop16,
-  author = {Andrianov Pavel},
-  title = {Extension of CPA Approach for Efficient Analysis of Parallel Programs},
-  year = {2016},
-  language = {english},
-}
+% conference{CPAWorkshop16,
+%  author = {Andrianov Pavel},
+%  title = {Extension of CPA Approach for Efficient Analysis of Parallel Programs},
+%  year = {2016},
+%  language = {english},
+%}
 
-@conference{CPAWorkshop17,
-  author = {Andrianov Pavel},
-  title = {Towards Verifying of a Real-Life Multithreaded Software},
-  year = {2017},
-  language = {english},
-}
+% conference{CPAWorkshop17,
+%  author = {Andrianov Pavel},
+%  title = {Towards Verifying of a Real-Life Multithreaded Software},
+%  year = {2017},
+%  language = {english},
+%}
