--- a/biblio/othercites.bib
+++ b/biblio/othercites.bib
@@ -1,3 +1,352 @@
+@inproceedings{MEMICS16-Multi-Threaded,
+author = {Dirk Beyer and Karlheinz Friedberger},
+title = {A Light-Weight Approach for Verifying Multi-Threaded Programs with CPAchecker},
+booktitle = {Proceedings of the 11th Doctoral Workshop on Mathematical and Engineering Methods in Computer Science (MEMICS~2016, Tel\v{c}, Czechia, October 21-23)},
+publisher = {ArXiV},
+editor = {J.~Bouda and L.~Hol\'ik and J.~Kofro\v{n} and J.~Strej\v{c}ek and A.~Rambousek},
+series = {EPTCS~233},
+pages = {61-71},
+year = {2016},
+doi = {10.4204/EPTCS.233.6},
+pdf = {https://www.sosy-lab.org/research/pub/2016-MEMICS.A_Light-Weight_Approach_for_Verifying_Multi-Threaded_Programs_with_CPAchecker.pdf},
+
+}
+
+@inproceedings{Henzinger:2004,
+ author = {Henzinger, Thomas A. and Jhala, Ranjit and Majumdar, Rupak},
+ title = {Race Checking by Context Inference},
+ booktitle = {Proceedings of the ACM SIGPLAN 2004 Conference on Programming Language Design and Implementation},
+ series = {PLDI '04},
+ year = {2004},
+ isbn = {1-58113-807-5},
+ location = {Washington DC, USA},
+ pages = {1--13},
+ numpages = {13},
+ url = {http://doi.acm.org/10.1145/996841.996844},
+ doi = {10.1145/996841.996844},
+ acmid = {996844},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {race conditions, software model checking}
+} 
+
+@InProceedings{Malkis:2006,
+author="Malkis, Alexander
+and Podelski, Andreas
+and Rybalchenko, Andrey",
+editor="Barkaoui, Kamel
+and Cavalcanti, Ana
+and Cerone, Antonio",
+title="Thread-Modular Verification Is Cartesian Abstract Interpretation",
+booktitle="Theoretical Aspects of Computing - ICTAC 2006",
+year="2006",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="183--197",
+isbn="978-3-540-48816-3"
+}
+
+@inproceedings{TSan,
+title	= {ThreadSanitizer – data race detection in practice.},
+author	= {Konstantin Serebryany and Timur Iskhodzhanov},
+year	= {2009},
+URL	= {http://doi.acm.org/10.1145/1791194.1791203},
+booktitle	= {Proceedings of the Workshop on Binary Instrumentation and Applications},
+pages	= {62--71},
+address	= {NYC, NY, U.S.A.}
+}
+
+@incollection{CPAchecker11,
+year={2011},
+isbn={978-3-642-22109-5},
+booktitle={Computer Aided Verification},
+volume={6806},
+series={Lecture Notes in Computer Science},
+doi={10.1007/978-3-642-22110-1_16},
+title={{CPA}checker: A Tool for Configurable Software Verification},
+url={http://dx.doi.org/10.1007/978-3-642-22110-1_16},
+publisher={Springer Berlin Heidelberg},
+author={Beyer, Dirk and Keremoglu, M.Erkan},
+pages={184-190}
+}
+
+@techreport{CPAchecker09,
+    author = {Dirk Beyer and M. Erkan Keremoglu},
+    title = {{CPAchecker}: A Tool for Configurable Software Verification},
+ year = {2009},
+ institution = {School of Computing Science, Simon Fraser University},
+ volume = {SFU-CS-2009-02}
+}
+
+@inproceedings{Beyer08,
+author={Beyer, D. and Henzinger, T.A. and Theoduloz, G.},
+booktitle={Automated Software Engineering, 2008. ASE 2008. 23rd IEEE/ACM International Conference on}, 
+title={Program Analysis with Dynamic Precision Adjustment},
+year={2008},
+month={sept.},
+volume={},
+number={},
+pages={29--38},
+keywords={client/server software;dynamic precision adjustment;model checking;predicate abstraction;program analysis;client-server systems;program diagnostics;program verification;},
+doi={10.1109/ASE.2008.13},
+ISSN={1527-1366},
+}
+
+@inproceedings{LargeBlocks09,
+author={Beyer, D. and Cimatti, A. and Griggio, A. and Keremoglu, M.E. and Sebastiani, R.},
+booktitle={Formal Methods in Computer-Aided Design, 2009. FMCAD 2009}, 
+title={Software model checking via large-block encoding},
+year={2009},
+month={nov.},
+volume={},
+number={},
+pages={25--32},
+keywords={Boolean predicate abstraction;C programs benchmark;Cartesian predicate abstraction;abstract reachability tree;abstract successor state;arbitrary Boolean formulas;control flow graph;large block encoding;single block encoding;software model checking;software verification;symbolic representation;Boolean functions;program verification;symbol manipulation;trees (mathematics);},
+doi={10.1109/FMCAD.2009.5351147},
+ISSN={},
+}
+
+@inproceedings{Beyer10,
+author={Beyer, D. and Keremoglu, M.E. and Wendler, P.},
+booktitle={Formal Methods in Computer-Aided Design, 2010. FMCAD 2010}, 
+title={Predicate Abstraction with Adjustable-Block Encoding},
+year={2010},
+}
+
+@inproceedings{Sung:2017,
+ author = {Sung, Chungha and Kusano, Markus and Wang, Chao},
+ title = {Modular Verification of Interrupt-driven Software},
+ booktitle = {Proceedings of the 32Nd IEEE/ACM International Conference on Automated Software Engineering},
+ series = {ASE 2017},
+ year = {2017},
+ isbn = {978-1-5386-2684-9},
+ location = {Urbana-Champaign, IL, USA},
+ pages = {206--216},
+ numpages = {11},
+ url = {http://dl.acm.org/citation.cfm?id=3155562.3155592},
+ acmid = {3155592},
+ publisher = {IEEE Press},
+ address = {Piscataway, NJ, USA},
+ keywords = {Datalog, Formal verification, Interrupt, Static analysis, abstract interpretation},
+}
+
+@article{Liang:2017,
+ author = {Liang, Lihao and Melham, Tom and Kroening, Daniel and Schrammel, Peter and Tautschnig, Michael},
+ title = {Effective Verification for Low-Level Software with Competing Interrupts},
+ journal = {ACM Trans. Embed. Comput. Syst.},
+ issue_date = {February 2018},
+ volume = {17},
+ number = {2},
+ month = {dec},
+ year = {2017},
+ issn = {1539-9087},
+ pages = {36:1--36:26},
+ articleno = {36},
+ numpages = {26},
+ url = {http://doi.acm.org/10.1145/3147432},
+ doi = {10.1145/3147432},
+ acmid = {3147432},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Interrupt-driven software, concurrency, interrupts, model checking, program instrumentation, symbolic execution},
+}
+
+@inproceedings{Zhou:2018,
+ author = {Zhou, Qing and Li, Lian and Wang, Lei and Xue, Jingling and Feng, Xiaobing},
+ title = {May-happen-in-parallel Analysis with Static Vector Clocks},
+ booktitle = {Proceedings of the 2018 International Symposium on Code Generation and Optimization},
+ series = {CGO 2018},
+ year = {2018},
+ isbn = {978-1-4503-5617-6},
+ location = {Vienna, Austria},
+ pages = {228--240},
+ numpages = {13},
+ url = {http://doi.acm.org/10.1145/3168813},
+ doi = {10.1145/3168813},
+ acmid = {3168813},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Pthreads, context-sensitivity, static race detection},
+}
+
+@inproceedings{Eslamimehr:2014,
+ author = {Eslamimehr, Mahdi and Palsberg, Jens},
+ title = {Sherlock: Scalable Deadlock Detection for Concurrent Programs},
+ booktitle = {Proceedings of the 22Nd ACM SIGSOFT International Symposium on Foundations of Software Engineering},
+ series = {FSE 2014},
+ year = {2014},
+ isbn = {978-1-4503-3056-5},
+ location = {Hong Kong, China},
+ pages = {353--365},
+ numpages = {13},
+ url = {http://doi.acm.org/10.1145/2635868.2635918},
+ doi = {10.1145/2635868.2635918},
+ acmid = {2635918},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Concurrency, deadlocks},
+}
+
+@inproceedings{Sui:2016,
+ author = {Sui, Yulei and Di, Peng and Xue, Jingling},
+ title = {Sparse Flow-sensitive Pointer Analysis for Multithreaded Programs},
+ booktitle = {Proceedings of the 2016 International Symposium on Code Generation and Optimization},
+ series = {CGO '16},
+ year = {2016},
+ isbn = {978-1-4503-3778-6},
+ location = {Barcelona, Spain},
+ pages = {160--170},
+ numpages = {11},
+ url = {http://doi.acm.org/10.1145/2854038.2854043},
+ doi = {10.1145/2854038.2854043},
+ acmid = {2854043},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Flow-Sensitivity, Pointer Analysis, Sparse Analysis},
+}
+
+@inproceedings{Steensgaard:1996,
+ author = {Steensgaard, Bjarne},
+ title = {Points-to Analysis in Almost Linear Time},
+ booktitle = {Proceedings of the 23rd ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages},
+ series = {POPL '96},
+ year = {1996},
+ isbn = {0-89791-769-3},
+ location = {St. Petersburg Beach, Florida, USA},
+ pages = {32--41},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/237721.237727},
+ doi = {10.1145/237721.237727},
+ acmid = {237727},
+ publisher = {ACM},
+ address = {New York, NY, USA}
+}
+
+@InProceedings{CIL,
+author={Necula, George C. and McPeak, Scott and Rahul, Shree P. and Weimer, Westley},
+editor={Horspool, R. Nigel},
+title={CIL: Intermediate Language and Tools for Analysis and Transformation of C Programs},
+booktitle={Compiler Construction},
+year={2002},
+publisher={Springer Berlin Heidelberg},
+address={Berlin, Heidelberg},
+pages={213--228},
+isbn={978-3-540-45937-8}
+}
+
+@inproceedings{Alglave:2013,
+ author = {Alglave, Jade and Kroening, Daniel and Nimal, Vincent and Tautschnig, Michael},
+ title = {Software Verification for Weak Memory via Program Transformation},
+ booktitle = {Proceedings of the 22Nd European Conference on Programming Languages and Systems},
+ series = {ESOP'13},
+ year = {2013},
+ isbn = {978-3-642-37035-9},
+ location = {Rome, Italy},
+ pages = {512--532},
+ numpages = {21},
+ url = {http://dx.doi.org/10.1007/978-3-642-37036-6_28},
+ doi = {10.1007/978-3-642-37036-6_28},
+ acmid = {2450306},
+ publisher = {Springer-Verlag},
+ address = {Berlin, Heidelberg}
+}
+
+@inproceedings{Abdulla:2017,
+ author = {Abdulla, Parosh Aziz and Atig, Mohamed Faouzi and Bouajjani, Ahmed and Ngo, Tuan Phong},
+ title = {Context-Bounded Analysis for POWER},
+ booktitle = {Proceedings, Part II, of the 23rd International Conference on Tools and Algorithms for the Construction and Analysis of Systems - Volume 10206},
+ year = {2017},
+ isbn = {978-3-662-54579-9},
+ pages = {56--74},
+ numpages = {19},
+ url = {https://doi.org/10.1007/978-3-662-54580-5_4},
+ doi = {10.1007/978-3-662-54580-5_4},
+ acmid = {3080460},
+ publisher = {Springer-Verlag New York, Inc.},
+ address = {New York, NY, USA}
+} 
+
+@article{Musuvathi:2007,
+ author = {Musuvathi, Madanlal and Qadeer, Shaz},
+ title = {Iterative Context Bounding for Systematic Testing of Multithreaded Programs},
+ journal = {SIGPLAN Not.},
+ issue_date = {June 2007},
+ volume = {42},
+ number = {6},
+ month = {jun},
+ year = {2007},
+ issn = {0362-1340},
+ pages = {446--455},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/1273442.1250785},
+ doi = {10.1145/1273442.1250785},
+ acmid = {1250785},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {concurrency, context-bounding, model checking, multithreading, partial-order reduction, shared-memory programs, software testing},
+}
+
+@InProceedings{SATabs,
+author={Clarke, Edmund and Kroening, Daniel and Sharygina, Natasha and Yorav, Karen},
+editor={Halbwachs, Nicolas and Zuck, Lenore D.},
+title={SATABS: SAT-Based Predicate Abstraction for ANSI-C},
+booktitle={Tools and Algorithms for the Construction and Analysis of Systems},
+year={2005},
+publisher={Springer Berlin Heidelberg},
+address={Berlin, Heidelberg},
+pages={570--574},
+isbn={978-3-540-31980-1}
+}
+
+
+@article{Clarke:2003,
+ author = {Clarke, Edmund and Grumberg, Orna and Jha, Somesh and Lu, Yuan and Veith, Helmut},
+ title = {Counterexample-guided Abstraction Refinement for Symbolic Model Checking},
+ journal = {J. ACM},
+ issue_date = {September 2003},
+ volume = {50},
+ number = {5},
+ month = {sep},
+ year = {2003},
+ issn = {0004-5411},
+ pages = {752--794},
+ numpages = {43},
+ url = {http://doi.acm.org/10.1145/876638.876643},
+ doi = {10.1145/876638.876643},
+ acmid = {876643},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Abstraction, hardware verification, symbolic model checking, temporal logic}
+}
+
+@book{Leveson:1995,
+ author = {Leveson, Nancy G.},
+ title = {Safeware: System Safety and Computers},
+ year = {1995},
+ isbn = {0-201-11972-2},
+ publisher = {ACM},
+ address = {New York, NY, USA}
+}
+
+@inproceedings{Qi:2009:MPE,
+ author = {Qi, Yao and Das, Raja and Luo, Zhi Da and Trotter, Martin},
+ title = {MulticoreSDK: A Practical and Efficient Data Race Detector for Real-world Applications},
+ booktitle = {Proceedings of the 7th Workshop on Parallel and Distributed Systems: Testing, Analysis, and Debugging},
+ series = {PADTAD '09},
+ year = {2009},
+ isbn = {978-1-60558-655-7},
+ location = {Chicago, Illinois},
+ pages = {5:1--5:11},
+ articleno = {5},
+ numpages = {11},
+ url = {http://doi.acm.org/10.1145/1639622.1639627},
+ doi = {10.1145/1639622.1639627},
+ acmid = {1639627},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {concurrent program analysis, data race detection, multicore platform}
+}
+
 @inproceedings{Kusano:2016:FCT,
  author = {Kusano, Markus and Wang, Chao},
  title = {Flow-sensitive Composition of Thread-modular Abstract Interpretation},
@@ -77,7 +426,7 @@
  issue_date = {August 2015},
  volume = {24},
  number = {4},
- month = sep,
+ month = {sep},
  year = {2015},
  issn = {1049-331X},
  pages = {24:1--24:30},
@@ -110,18 +459,15 @@
 } 
 
 @InProceedings{Kahlon:2009:SRTI,
-author="Kahlon, Vineet
-and Sankaranarayanan, Sriram
-and Gupta, Aarti",
-editor="Kowalewski, Stefan
-and Philippou, Anna",
-title="Semantic Reduction of Thread Interleavings in Concurrent Programs",
-booktitle="Tools and Algorithms for the Construction and Analysis of Systems",
-year="2009",
-publisher="Springer Berlin Heidelberg",
-address="Berlin, Heidelberg",
-pages="124--138",
-isbn="978-3-642-00768-2"
+author={Kahlon, Vineet and Sankaranarayanan, Sriram and Gupta, Aarti},
+editor={Kowalewski, Stefan and Philippou, Anna},
+title={Semantic Reduction of Thread Interleavings in Concurrent Programs},
+booktitle={Tools and Algorithms for the Construction and Analysis of Systems},
+year={2009},
+publisher={Springer Berlin Heidelberg},
+address={Berlin, Heidelberg},
+pages={124--138},
+isbn={978-3-642-00768-2}
 }
 
 @inproceedings{Atig:2009,
@@ -142,18 +488,18 @@ isbn="978-3-642-00768-2"
 }
 
 @article{KIM200921,
-title = "Model-based Kernel Testing for Concurrency Bugs through Counter Example Replay",
-journal = "Electronic Notes in Theoretical Computer Science",
-volume = "253",
-number = "2",
-pages = "21 - 36",
-year = "2009",
-note = "Proceedings of Fifth Workshop on Model Based Testing (MBT 2009)",
-issn = "1571-0661",
-doi = "https://doi.org/10.1016/j.entcs.2009.09.049",
-url = "http://www.sciencedirect.com/science/article/pii/S1571066109004034",
-author = "Moonzoo Kim and Shin Hong and Changki Hong and Taeho Kim",
-keywords = "Model checking, testing, counter example analysis, model extraction"
+title = {Model-based Kernel Testing for Concurrency Bugs through Counter Example Replay},
+journal = {Electronic Notes in Theoretical Computer Science},
+volume = {253},
+number = {2},
+pages = {21 - 36},
+year = {2009},
+note = {Proceedings of Fifth Workshop on Model Based Testing (MBT 2009)},
+issn = {1571-0661},
+doi = {https://doi.org/10.1016/j.entcs.2009.09.049},
+url = {http://www.sciencedirect.com/science/article/pii/S1571066109004034},
+author = {Moonzoo Kim and Shin Hong and Changki Hong and Taeho Kim},
+keywords = {Model checking, testing, counter example analysis, model extraction}
 }
 
 @inproceedings{Chatterjee:2007,
@@ -251,7 +597,7 @@ pages = {},
 journal = {},
 volume = {},
 chapter = {},
-isbn = {},
+isbn = {}
 }
 
 @inproceedings{Park:2009:ASPLOS,
@@ -506,7 +852,7 @@ isbn = {},
  acmid = {1595701},
  publisher = {ACM},
  address = {New York, NY, USA},
- keywords = {asynchronous programs, bootstrapping, pointer analysis, static data race detection},
+ keywords = {asynchronous programs, bootstrapping, pointer analysis, static data race detection}
 }
 
 @inproceedings{Seidl:2009,
@@ -1764,156 +2110,3 @@ volume={8}
   year         = {1993},
   language     = {english}
 }
-
-%%% Реальные примеры
-
-% Инициалы должны быть записаны после запятой, с точками, через пробел
-% http://www.kit-e.ru/articles/elcomp/2006_12_124.php
-% Подчёркивания в ссылке приходится экранировать
-% http://www.kit-e.ru/articles/elcomp/2006\_12\_124.php
-@online{medvedev2006jelektronnye,
-  title={Электронные компоненты и монтажные подложки},
-  author={Медведев, А. М.},
-  journal={Компоненты и технологии},
-  number={12},
-  pages={124--134},
-  year={2006},
-  medium={Электронный ресурс},
-  url = {http://www.kit-e.ru/articles/elcomp/2006\_12\_124.php},
-  urldate = {19.01.2015},
-  language = {russian}
-}
-
-% Real example
-% & в названии журнала надо экранировать
-% 10.1002/1521-4125(200007)23:7<581::AID-CEAT581>3.0.CO;2-P
-% < > в ссылке приходится экранировать %3C и %3E, а потом ещё знаки процента в них экранировать
-% 10.1002/1521-4125(200007)23:7%3C581::AID-CEAT581%3E3.0.CO;2-P
-% 10.1002/1521-4125(200007)23:7\%3C581::AID-CEAT581\%3E3.0.CO;2-P
-% url не нужен. если запись о бумажной публикации
-@article {CEAT:CEAT581,
-  author = {Deiters, U. K.},
-  title = {A Modular Program System for the Calculation of Thermodynamic Properties of Fluids},
-  journal = {Chemical Engineering \& Technology},
-  volume = {23},
-  number = {7},
-  publisher = {WILEY-VCH Verlag},
-  issn = {1521-4125},
-  doi = {10.1002/1521-4125(200007)23:7<581::AID-CEAT581>3.0.CO;2-P},
-  pages = {581--584},
-  year = {2000},
-  language = {english}
-}
-
-% Real with  4 authors
-@article{doi:10.1080/01932691.2010.513279,
-  author = { {\relax Y}oung-{\relax S}ang   Cho  and  {\relax Y}oung   {\relax K}uk   Kim  and  {\relax K}ook   {\relax C}hae   Chung  and  {\relax C}hul   {\relax J}in   Choi },
-  title = {Deformation of Colloidal Crystals for Photonic Band Gap Tuning},
-  journal = {Journal of Dispersion Science and Technology},
-  volume = {32},
-  number = {10},
-  pages = {1408-1415},
-  year = {2011},
-  doi = {10.1080/01932691.2010.513279},
-  language = {english}
-}
-
-% doi with (), author with umlaut or other unicode or specific symbols, 9 authors
-% latex don't like Gösele1999161 in ref
-% Умляуты в авторах понимаются из-за поддержки в юникодной странице pdflatex и xelatex
-% Иллюстрация того, что будет. если на английской записи будут поставлена пометка, что язык русский
-@article{Gosele1999161,
-  title = "Wafer bonding for microsystems technologies ",
-  journal = "Sensors and Actuators A: Physical ",
-  volume = "74",
-  number = "1–3",
-  pages = "161 - 168",
-  year = "1999",
-  issn = "0924-4247",
-  doi = "10.1016/S0924-4247(98)00310-0",
-  author = "Gösele, U. and Tong, Q.-Y. and Schumacher, A. and Kräuter, G. and Reiche, M. and Plößl, A. and Kopperschmidt, P. and Lee, T.-H. and Kim, W.-J.",
-  keywords = "Wafer bonding",
-  keywords = "Fusion bonding",
-  keywords = "Pressure sensors",
-  keywords = "Interface reactions",
-  keywords = "Hydrophilic bonding",
-  keywords = "Hydrophobic bonding",
-  language = {russian}
-}
-
-% Real example (from Google or Springer)
-% unmodified styles don't know %language = {English}
-% язык писать с маленьких
-% иллюстрация incollection
-% 10.1007/0-387-32989-7_45
-% Подчёркивания в DOI приходится экранировать
-% 10.1007/0-387-32989-7\_45
-@incollection{Li2007StressAnalysis,
-  year={2007},
-  isbn={978-0-387-27974-9},
-  booktitle={Micro- and Opto-Electronic Materials and Structures: Physics, Mechanics, Design, Reliability, Packaging},
-  editor={Suhir, E. and Lee, Y. C. and Wong, C. P.},
-  doi={10.1007/0-387-32989-7_45},
-  title={Stress Analysis for Processed Silicon Wafers and Packaged Micro-devices},
-  publisher={Springer US},
-  author={Li, {\relax L}i and Guo, {\relax Y}ifan and Zheng, {\relax D}awei},
-  pages={B677-B709},
-  language={english}
-}
-
-% Real, β sign 
-% inputenc don't know β sign %aluminosilicate-β-quartz
-% Знаки типа β, которые не знает таблица кодировки, с которой работает компилятор нужно заменять на latex команды
-% doi должен быть без http://dx.doi.org/
-@article{Shoji199895,
-title = "Low-temperature anodic bonding using lithium aluminosilicate-$\beta$-quartz glass ceramic",
-journal = "Sensors and Actuators A: Physical",
-volume = "64",
-number = "1",
-pages = "95 - 100",
-year = "1998",
-note = "Tenth {IEEE} International Workshop on Micro Electro Mechanical Systems ",
-issn = "0924-4247",
-doi = "10.1016/S0924-4247(97)01659-2",
-author = {{\relax S}huichi Shoji and {\relax H}iroto Kikuchi and {\relax H}irotaka Torigoe},
-keywords = "Anodic bonding",
-keywords = "Low-temperature bonding",
-keywords = "Micro assembly",
-keywords = "Micro package",
-keywords = "Glass ceramic",
-}
-
-
-% from urlbst package
-% Example from Jason Eisner, by mail (nothing special about the entry,
-% but he seemed to be having formatting problems with unsrturl and proceedings
-% entries.
-% http://cs.jhu.edu/~jason/papers/#icassp07
-@InProceedings{test:eisner-sample,
-  author =       {Damianos Karakos and Sanjeev Khudanpur and Jason
-                  Eisner and Carey~E. Priebe},
-  title =        {Iterative denoising using {J}ensen-{R}enyi
-                  divergences with an application to unsupervised
-                  document categorization},
-  booktitle =    {Proceedings of ICASSP},
-  year =         2007,
-  url =          {http://cs.jhu.edu/~jason/papers/\#icassp07}
-}
-
-% Попытка записать патент имеющимися средствами
-@Book{iofis_patent1960,
-  title                    = {Способ пайки керамики с~керамикой и~стекла с~металлом : а.\,с.~126728 СССР},
-  author                   = {Иофис, Н. А.},
-  year                     = {1960},
-  numpages                 = {Бюл. № 5.~1},
-  language                 = {russian}
-}
-
-% Попытка записать патент имеющимися средствами
-@Book{AB_patent_Pomerantz_1968,
-  title                    = {Anodic bonding : patent no. 3397278 US},
-  author                   = {Pomerantz, D. I.},
-  year                     = {1968},
-  language                 = {english}
-}
-
