--- a/common/data.tex
+++ b/common/data.tex
@@ -23,7 +23,7 @@
 \newcommand{\thesisDegree}             % Диссертация, ученая степень
 {кандидата физико-математических наук}
 \newcommand{\thesisDegreeShort}        % Диссертация, ученая степень, краткая запись
-{канд. физ.-мат. наук}
+{к.~ф.-м.~н.}
 \newcommand{\thesisCity}               % Диссертация, город написания диссертации
 {Москва}
 \newcommand{\thesisYear}               % Диссертация, год написания диссертации
@@ -34,16 +34,16 @@
 {ИСП РАН}
 
 \newcommand{\thesisInOrganization}     % Диссертация, организация в предложном падеже: Работа выполнена в ...
-{институт системного программирования Российской академии наук}
+{институте системного программирования Российской академии наук}
 
 \newcommand{\supervisorFio}            % Научный руководитель, ФИО
 {Хорошилов Алексей Владимирович}
 \newcommand{\supervisorRegalia}        % Научный руководитель, регалии
 {кандидат физико-математических наук}
 \newcommand{\supervisorFioShort}       % Научный руководитель, ФИО
-{А.~В.~Хорошилов}
+{Хорошилов~А.~В.}
 \newcommand{\supervisorRegaliaShort}   % Научный руководитель, регалии
-{канд.~физ.-мат.~наук}
+{к.~ф.-м.~н.}
 
 
 \newcommand{\opponentOneFio}           % Оппонент 1, ФИО
