--- a/common/packages.tex
+++ b/common/packages.tex
@@ -29,6 +29,7 @@
     }
 \fi
 \usepackage{mathtools}                  % Добавляет окружение multlined
+\usepackage{mathrsfs}                  % Добавляет окружение multlined
 
 %%%% Установки для размера шрифта 14 pt %%%%
 %% Формирование переменных и констант для сравнения (один раз для всех подключаемых файлов)%%
