--- a/common/concl.tex
+++ b/common/concl.tex
@@ -2,8 +2,10 @@
 %% 5.3.3 В заключении диссертации излагают итоги выполненного исследования, рекомендации, перспективы дальнейшей разработки темы.
 %% 9.2.3 В заключении автореферата диссертации излагают итоги данного исследования, рекомендации и перспективы дальнейшей разработки темы.
 \begin{enumerate}
-  \item На основе анализа \ldots
-  \item Численные исследования показали, что \ldots
-  \item Математическое моделирование показало \ldots
-  \item Для выполнения поставленных задач был создан \ldots
+  \item Был разработан общий алгоритм анализа, позволяющий объединить в себе как классический алгоритм CPA, так и алгоритм с раздельным анализом потоков;
+  \item Была доказана теорема, позволяющая гарантировать корректность работы алгоритма;
+  \item На основе общего алгоритма был разработан алгоритм с раздельным анализом потоков;
+  \item Был разработан метод поиска состояний гонки, базирующийся на подходе с раздельным анализом потоков;
+  \item Была доказана корректность предложенного метода поиска состояний гонки, который позволяет гибко балансировать точность и скорость анализа;
+  \item Были проведены эксперименты, которые показали высокую степень гибкости разработанного метода.
 \end{enumerate}
